docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jza5hg74tc6r43vjf7fsy9my
branchName: main
commitSha: 80bcee8063084ee9695a78c9cc19ee877f32e23a
commitUrl: https://github.com/Redocly/redocly/commit/80bcee8063084ee9695a78c9cc19ee877f32e23a

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,19 @@
 '@redocly/realm':
+  0.124.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Fixed scopes display in the security modal.
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.0
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.2.0-next.0
+      '@redocly/portal-legacy-ui': 0.7.0-next.0
+      '@redocly/asyncapi-docs': 0.5.0-next.0
+      '@redocly/graphql-docs': 0.13.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   0.123.0:
     timestamp: 1751536139000
     changes:
@@ -3478,6 +3493,20 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.0
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.2.0-next.0
+      '@redocly/portal-legacy-ui': 0.7.0-next.0
+      '@redocly/asyncapi-docs': 0.5.0-next.0
+      '@redocly/graphql-docs': 0.13.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   0.123.0:
     timestamp: 1751536139000
     changes:
@@ -6268,6 +6297,20 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.0
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.2.0-next.0
+      '@redocly/portal-legacy-ui': 0.7.0-next.0
+      '@redocly/asyncapi-docs': 0.5.0-next.0
+      '@redocly/graphql-docs': 0.13.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   0.123.0:
     timestamp: 1751536139000
     changes:
@@ -9053,6 +9096,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Fixed scopes display in the security modal.
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.0
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.2.0-next.0
+      '@redocly/portal-legacy-ui': 0.7.0-next.0
+      '@redocly/asyncapi-docs': 0.5.0-next.0
+      '@redocly/graphql-docs': 0.13.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   0.123.0:
     timestamp: 1751536139000
     changes:
@@ -11817,6 +11875,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.56.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/realm-asyncapi-sdk': 0.2.0-next.0
   0.55.0:
     timestamp: 1751536139000
     changes:
@@ -13766,6 +13832,16 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Fixed scopes display in the security modal.
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/replay': 0.15.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   3.11.0:
     timestamp: 1751536139000
     changes:
@@ -15954,6 +16030,14 @@
       patch: []
     dependencies: {}
 '@redocly/graphql-docs':
+  0.13.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.0
   0.12.0:
     timestamp: 1751536139000
     changes:
@@ -16827,8 +16911,15 @@
         - Redocly Mock Server release
     dependencies: {}
 '@redocly/portal-legacy-ui':
+  0.7.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies: {}
   0.6.0:
-    timestamp: 1751536139000
+    timestamp: 1751613974000
     changes:
       minor: []
       patch: []
@@ -16915,6 +17006,18 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/realm': 0.124.0-next.0
+      '@redocly/redoc': 0.124.0-next.0
+      '@redocly/redoc-reef': 0.124.0-next.0
+      '@redocly/redoc-revel': 0.124.0-next.0
+      '@redocly/theme': 0.56.0-next.0
   1.6.0:
     timestamp: 1751536139000
     changes:
@@ -20121,6 +20224,14 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.0
   0.8.0:
     timestamp: 1751536139000
     changes:
@@ -21921,6 +22032,14 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.15.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.0
   0.14.0:
     timestamp: 1751536139000
     changes:
@@ -22883,6 +23002,14 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.7.0-next.0:
+    timestamp: 1751613974000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.0
   0.6.0:
     timestamp: 1751536139000
     changes:
