docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzah76hjbz93caszt3k93ffm
branchName: main
commitSha: da8120d463553b0576258605cc3cce45a9950b3f
commitUrl: https://github.com/Redocly/redocly/commit/da8120d463553b0576258605cc3cce45a9950b3f

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -25318,3 +25318,10 @@ reunite:
         - Fixed issue where user session omitted some teams after SSO login.
         - Added email notifications for failed remote content auto-merges.
     dependencies: {}
+  v2025-07-04.1:
+    timestamp: 1751620137000
+    changes:
+      minor: []
+      patch:
+        - Fixed crash when deleting a remote subfolder.
+    dependencies: {}
