fix(project): split openapi-code-sample for request and response (#16467)
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzhzj803wcbz26by7yv8j0bm
branchName: main
commitSha: 0995e3ebc4ce3c823ef19e901907ece8aa40b74c
commitUrl: https://github.com/Redocly/redocly/commit/0995e3ebc4ce3c823ef19e901907ece8aa40b74c

--- a/docs/realm/sidebars.yaml
+++ b/docs/realm/sidebars.yaml
@@ -203,6 +203,8 @@
           label: Markdoc example
         - page: author/reference/tags/openapi-code-sample.md
           label: OpenAPI code sample
+        - page: author/reference/tags/openapi-response-sample.md
+          label: OpenAPI response sample
         - page: author/reference/tags/replay-openapi.md
           label: Replay OpenAPI
         - page: author/reference/tags/tabs.md
