--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,18 @@
 '@redocly/realm':
+  0.124.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch:
+        - Fixed `requestBody` and `parameters` being ignored in the `replay-openapi` Markdoc tag.
+        - Fixed RBAC behavior for folders with names prefixed by a dot.
+        - >-
+          Added `openapi-response-sample` tag to separate OpenAPI code sample functionality for requests and responses, enabling granular control of
+          response samples.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.1
+      '@redocly/asyncapi-docs': 0.5.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.1
   0.124.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -3493,6 +3507,19 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch:
+        - Fixed RBAC behavior for folders with names prefixed by a dot.
+        - >-
+          Added `openapi-response-sample` tag to separate OpenAPI code sample functionality for requests and responses, enabling granular control of
+          response samples.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.1
+      '@redocly/asyncapi-docs': 0.5.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.1
   0.124.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -6297,6 +6324,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch:
+        - Fixed RBAC behavior for folders with names prefixed by a dot.
+        - >-
+          Added `openapi-response-sample` tag to separate OpenAPI code sample functionality for requests and responses, enabling granular control of
+          response samples.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.1
+      '@redocly/asyncapi-docs': 0.5.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.1
   0.124.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -9096,6 +9136,17 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch:
+        - Fixed `requestBody` and `parameters` being ignored in the `replay-openapi` Markdoc tag.
+        - Fixed RBAC behavior for folders with names prefixed by a dot.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.1
+      '@redocly/asyncapi-docs': 0.5.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.1
   0.124.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -13832,6 +13883,16 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch:
+        - Fixed `requestBody` and `parameters` being ignored in the `replay-openapi` Markdoc tag.
+        - >-
+          Added `openapi-response-sample` tag to separate OpenAPI code sample functionality for requests and responses, enabling granular control of
+          response samples.
+    dependencies: {}
   3.12.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -17006,6 +17067,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.1
+      '@redocly/redoc': 0.124.0-next.1
+      '@redocly/redoc-reef': 0.124.0-next.1
+      '@redocly/redoc-revel': 0.124.0-next.1
   1.7.0-next.0:
     timestamp: 1751613974000
     changes:
@@ -20224,6 +20295,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.1:
+    timestamp: 1751888780000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.1
   0.9.0-next.0:
     timestamp: 1751613974000
     changes:
