docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzjpkky4596k8yknj506xqt5
branchName: main
commitSha: f6329929ebb832d042a28f5249951108a3b3c946
commitUrl: https://github.com/Redocly/redocly/commit/f6329929ebb832d042a28f5249951108a3b3c946

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,11 @@
 '@redocly/realm':
+  0.124.0-next.2:
+    timestamp: 1751900204000
+    changes:
+      minor: []
+      patch:
+        - Fixed handling of missing SSO configuration in the invitation flow.
+    dependencies: {}
   0.124.0-next.1:
     timestamp: 1751888780000
     changes:
@@ -3507,6 +3514,12 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.2:
+    timestamp: 1751900204000
+    changes:
+      minor: []
+      patch: []
+    dependencies: {}
   0.124.0-next.1:
     timestamp: 1751888780000
     changes:
@@ -6324,6 +6337,12 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.2:
+    timestamp: 1751900204000
+    changes:
+      minor: []
+      patch: []
+    dependencies: {}
   0.124.0-next.1:
     timestamp: 1751888780000
     changes:
@@ -9136,6 +9155,12 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.2:
+    timestamp: 1751900204000
+    changes:
+      minor: []
+      patch: []
+    dependencies: {}
   0.124.0-next.1:
     timestamp: 1751888780000
     changes:
@@ -17067,6 +17092,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.2:
+    timestamp: 1751900204000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.2
+      '@redocly/redoc': 0.124.0-next.2
+      '@redocly/redoc-revel': 0.124.0-next.2
+      '@redocly/redoc-reef': 0.124.0-next.2
   1.7.0-next.1:
     timestamp: 1751888780000
     changes:
