--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,12 @@
 '@redocly/realm':
+  0.124.0-next.3:
+    timestamp: 1751968958000
+    changes:
+      minor:
+        - Added built-in translations for multiple languages.
+      patch:
+        - Fixed `NextPage` and `PreviousPage` not displaying when `REDOCLY_PATH_PREFIX` was set.
+    dependencies: {}
   0.124.0-next.2:
     timestamp: 1751900204000
     changes:
@@ -3514,6 +3522,14 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.3:
+    timestamp: 1751968958000
+    changes:
+      minor:
+        - Added built-in translations for multiple languages.
+      patch:
+        - Fixed `NextPage` and `PreviousPage` not displaying when `REDOCLY_PATH_PREFIX` was set.
+    dependencies: {}
   0.124.0-next.2:
     timestamp: 1751900204000
     changes:
@@ -6337,6 +6353,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.3:
+    timestamp: 1751968958000
+    changes:
+      minor:
+        - Added built-in translations for multiple languages.
+      patch:
+        - Fixed `NextPage` and `PreviousPage` not displaying when `REDOCLY_PATH_PREFIX` was set.
+    dependencies: {}
   0.124.0-next.2:
     timestamp: 1751900204000
     changes:
@@ -9155,6 +9179,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.3:
+    timestamp: 1751968958000
+    changes:
+      minor:
+        - Added built-in translations for multiple languages.
+      patch:
+        - Fixed `NextPage` and `PreviousPage` not displaying when `REDOCLY_PATH_PREFIX` was set.
+    dependencies: {}
   0.124.0-next.2:
     timestamp: 1751900204000
     changes:
@@ -17092,6 +17124,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.3:
+    timestamp: 1751968958000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.3
+      '@redocly/redoc': 0.124.0-next.3
+      '@redocly/redoc-reef': 0.124.0-next.3
+      '@redocly/redoc-revel': 0.124.0-next.3
   1.7.0-next.2:
     timestamp: 1751900204000
     changes:
