--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,13 @@
 '@redocly/realm':
+  0.124.0-next.4:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.2
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.2
   0.124.0-next.3:
     timestamp: 1751968958000
     changes:
@@ -3522,6 +3531,15 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.4:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.2
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.2
   0.124.0-next.3:
     timestamp: 1751968958000
     changes:
@@ -6353,6 +6371,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.4:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.2
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.2
   0.124.0-next.3:
     timestamp: 1751968958000
     changes:
@@ -9179,6 +9206,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.4:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.2
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.2
   0.124.0-next.3:
     timestamp: 1751968958000
     changes:
@@ -13940,6 +13976,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.2:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch:
+        - Fixed scopes display in the security modal.
+    dependencies: {}
   3.12.0-next.1:
     timestamp: 1751888780000
     changes:
@@ -17124,6 +17167,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.4:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.4
+      '@redocly/redoc': 0.124.0-next.4
+      '@redocly/redoc-reef': 0.124.0-next.4
+      '@redocly/redoc-revel': 0.124.0-next.4
   1.7.0-next.3:
     timestamp: 1751968958000
     changes:
@@ -20372,6 +20425,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.2:
+    timestamp: 1752031708000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.2
   0.9.0-next.1:
     timestamp: 1751888780000
     changes:
