docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzst00psca15tpxejqc45zda
branchName: main
commitSha: 8dc42f4fb10163967503060730b36a62f6fda46f
commitUrl: https://github.com/Redocly/redocly/commit/8dc42f4fb10163967503060730b36a62f6fda46f

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,17 @@
 '@redocly/realm':
+  0.124.0-next.5:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where a search query containing brackets caused a 500 error in the Flexsearch engine.
+        - Fixed `HEAD` requests returning 404 errors.
+        - Prevented hydration errors by placing Markdoc block tags on separate lines.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.3
+      '@redocly/asyncapi-docs': 0.5.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.3
   0.124.0-next.4:
     timestamp: 1752031708000
     changes:
@@ -3531,6 +3544,19 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.5:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where a search query containing brackets caused a 500 error in the Flexsearch engine.
+        - Fixed `HEAD` requests returning 404 errors.
+        - Prevented hydration errors by placing Markdoc block tags on separate lines.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.3
+      '@redocly/asyncapi-docs': 0.5.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.3
   0.124.0-next.4:
     timestamp: 1752031708000
     changes:
@@ -6371,6 +6397,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.5:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where a search query containing brackets caused a 500 error in the Flexsearch engine.
+        - Fixed `HEAD` requests returning 404 errors.
+        - Prevented hydration errors by placing Markdoc block tags on separate lines.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.3
+      '@redocly/asyncapi-docs': 0.5.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.3
   0.124.0-next.4:
     timestamp: 1752031708000
     changes:
@@ -9206,6 +9245,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.5:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where a search query containing brackets caused a 500 error in the Flexsearch engine.
+        - Fixed `HEAD` requests returning 404 errors.
+        - Prevented hydration errors by placing Markdoc block tags on separate lines.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.3
+      '@redocly/asyncapi-docs': 0.5.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.3
   0.124.0-next.4:
     timestamp: 1752031708000
     changes:
@@ -13976,6 +14028,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.3:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies: {}
   3.12.0-next.2:
     timestamp: 1752031708000
     changes:
@@ -17167,6 +17226,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.5:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.5
+      '@redocly/redoc': 0.124.0-next.5
+      '@redocly/redoc-reef': 0.124.0-next.5
+      '@redocly/redoc-revel': 0.124.0-next.5
   1.7.0-next.4:
     timestamp: 1752031708000
     changes:
@@ -20425,6 +20494,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.3:
+    timestamp: 1752138689000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.3
   0.9.0-next.2:
     timestamp: 1752031708000
     changes:
