--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -25616,3 +25616,11 @@ reunite:
       patch:
         - Fixed crash when deleting a remote subfolder.
     dependencies: {}
+  v2025-07-10.2:
+    timestamp: 1752141333000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/cli` dependency to version `2.0.0-next.1`.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies: {}
