--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -15873,6 +15873,13 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/config':
+  0.26.3:
+    timestamp: 1752149929000
+    changes:
+      minor: []
+      patch:
+        - Fixed configuration schemas for `preprocessors` and `scorecard` options.
+    dependencies: {}
   0.26.2:
     timestamp: 1750321133000
     changes:
@@ -16901,6 +16908,13 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/mock-server':
+  0.2.18:
+    timestamp: 1752149929000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies: {}
   0.2.17:
     timestamp: 1750934732000
     changes:
@@ -25615,12 +25629,4 @@ reunite:
       minor: []
       patch:
         - Fixed crash when deleting a remote subfolder.
-    dependencies: {}
-  v2025-07-10.2:
-    timestamp: 1752141333000
-    changes:
-      minor: []
-      patch:
-        - Updated `@redocly/cli` dependency to version `2.0.0-next.1`.
-        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
     dependencies: {}
