--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,11 @@
 '@redocly/realm':
+  0.124.0-next.6:
+    timestamp: 1752151894000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/config` package to fix an error during build.
+    dependencies: {}
   0.124.0-next.5:
     timestamp: 1752138689000
     changes:
@@ -3544,6 +3551,13 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.6:
+    timestamp: 1752151894000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/config` package to fix an error during build.
+    dependencies: {}
   0.124.0-next.5:
     timestamp: 1752138689000
     changes:
@@ -6397,6 +6411,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.6:
+    timestamp: 1752151894000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/config` package to fix an error during build.
+    dependencies: {}
   0.124.0-next.5:
     timestamp: 1752138689000
     changes:
@@ -9245,6 +9266,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.6:
+    timestamp: 1752151894000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/config` package to fix an error during build.
+    dependencies: {}
   0.124.0-next.5:
     timestamp: 1752138689000
     changes:
@@ -17240,6 +17268,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.6:
+    timestamp: 1752151894000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.6
+      '@redocly/redoc': 0.124.0-next.6
+      '@redocly/redoc-reef': 0.124.0-next.6
+      '@redocly/redoc-revel': 0.124.0-next.6
   1.7.0-next.5:
     timestamp: 1752138689000
     changes:
