docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jztd0a73yh1wgg1g4p68pf27
branchName: main
commitSha: d9847dd152b6017bf3a14e66736f63c968fb446f
commitUrl: https://github.com/Redocly/redocly/commit/d9847dd152b6017bf3a14e66736f63c968fb446f

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -25790,3 +25790,11 @@ reunite:
       patch:
         - Fixed crash when deleting a remote subfolder.
     dependencies: {}
+  v2025-07-10.3:
+    timestamp: 1752156024000
+    changes:
+      minor: []
+      patch:
+        - Updated `@redocly/cli` dependency to version `2.0.0-next.1`.
+        - Updated `@redocly/openapi-core` dependency to version `2.0.0-next.1`.
+    dependencies: {}
