--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,16 @@
 '@redocly/realm':
+  0.124.0-next.8:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch:
+        - Fixed accessibility issues with unlabeled buttons.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.5
+      '@redocly/graphql-docs': 0.13.0-next.1
+      '@redocly/openapi-docs': 3.12.0-next.5
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.5
   0.124.0-next.7:
     timestamp: 1752154800000
     changes:
@@ -3565,6 +3577,18 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.8:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch:
+        - Fixed accessibility issues with unlabeled buttons.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.5
+      '@redocly/graphql-docs': 0.13.0-next.1
+      '@redocly/openapi-docs': 3.12.0-next.5
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.5
   0.124.0-next.7:
     timestamp: 1752154800000
     changes:
@@ -6439,6 +6463,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.8:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch:
+        - Fixed accessibility issues with unlabeled buttons.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.5
+      '@redocly/graphql-docs': 0.13.0-next.1
+      '@redocly/openapi-docs': 3.12.0-next.5
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.5
   0.124.0-next.7:
     timestamp: 1752154800000
     changes:
@@ -9308,6 +9344,18 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.8:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch:
+        - Fixed accessibility issues with unlabeled buttons.
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
+      '@redocly/asyncapi-docs': 0.5.0-next.5
+      '@redocly/graphql-docs': 0.13.0-next.1
+      '@redocly/openapi-docs': 3.12.0-next.5
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.5
   0.124.0-next.7:
     timestamp: 1752154800000
     changes:
@@ -12155,6 +12203,13 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.56.0-next.2:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch:
+        - Fixed accessibility issues with unlabeled buttons.
+    dependencies: {}
   0.56.0-next.1:
     timestamp: 1752154800000
     changes:
@@ -14120,6 +14175,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.5:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.15.0-next.2
   3.12.0-next.4:
     timestamp: 1752154800000
     changes:
@@ -17354,6 +17416,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.8:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
+      '@redocly/realm': 0.124.0-next.8
+      '@redocly/redoc': 0.124.0-next.8
+      '@redocly/redoc-reef': 0.124.0-next.8
+      '@redocly/redoc-revel': 0.124.0-next.8
   1.7.0-next.7:
     timestamp: 1752154800000
     changes:
@@ -20644,6 +20717,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.5:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.5
   0.9.0-next.4:
     timestamp: 1752154800000
     changes:
@@ -22481,6 +22561,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.15.0-next.2:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
   0.15.0-next.1:
     timestamp: 1752154800000
     changes:
@@ -23459,6 +23546,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.7.0-next.2:
+    timestamp: 1752167971000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.56.0-next.2
   0.7.0-next.1:
     timestamp: 1752154800000
     changes:
