docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jzx1rrtanddke2yp87490n9g
branchName: main
commitSha: b59a11198841a974f72b8b89dbc4cd3ccee1e8f4
commitUrl: https://github.com/Redocly/redocly/commit/b59a11198841a974f72b8b89dbc4cd3ccee1e8f4

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,14 @@
 '@redocly/realm':
+  0.124.0-next.9:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch:
+        - Improved error handling in `openapi-docs` to prevent dev server crashes.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.6
+      '@redocly/asyncapi-docs': 0.5.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.6
   0.124.0-next.8:
     timestamp: 1752167971000
     changes:
@@ -3577,6 +3587,15 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.9:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.6
+      '@redocly/asyncapi-docs': 0.5.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.6
   0.124.0-next.8:
     timestamp: 1752167971000
     changes:
@@ -6463,6 +6482,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.9:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.6
+      '@redocly/asyncapi-docs': 0.5.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.6
   0.124.0-next.8:
     timestamp: 1752167971000
     changes:
@@ -9344,6 +9372,16 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.9:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch:
+        - Improved error handling in `openapi-docs` to prevent dev server crashes.
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.6
+      '@redocly/asyncapi-docs': 0.5.0-next.6
+      '@redocly/portal-plugin-mock-server': 0.9.0-next.6
   0.124.0-next.8:
     timestamp: 1752167971000
     changes:
@@ -14175,6 +14213,16 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.12.0-next.6:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch:
+        - Fixed `hideSchemaTitles` option for displaying names in `oneOf` schemas.
+        - Fixed broken `pointer` parameter in `replay-openapi` Markdoc component.
+        - Improved error handling in `openapi-docs` to prevent dev server crashes.
+    dependencies:
+      '@redocly/replay': 0.15.0-next.3
   3.12.0-next.5:
     timestamp: 1752167971000
     changes:
@@ -17416,6 +17464,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.9:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.9
+      '@redocly/redoc': 0.124.0-next.9
+      '@redocly/redoc-reef': 0.124.0-next.9
+      '@redocly/redoc-revel': 0.124.0-next.9
   1.7.0-next.8:
     timestamp: 1752167971000
     changes:
@@ -20717,6 +20775,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.9.0-next.6:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.12.0-next.6
   0.9.0-next.5:
     timestamp: 1752167971000
     changes:
@@ -22561,6 +22626,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.15.0-next.3:
+    timestamp: 1752247504000
+    changes:
+      minor: []
+      patch:
+        - Fixed broken `pointer` parameter in `replay-openapi` Markdoc component.
+    dependencies: {}
   0.15.0-next.2:
     timestamp: 1752167971000
     changes:
