docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01k04p6zkz89s9f6ae3z3p1s8x
branchName: main
commitSha: 34808407001a399f0a5bb8dd2400fc5db2a9bc6b
commitUrl: https://github.com/Redocly/redocly/commit/34808407001a399f0a5bb8dd2400fc5db2a9bc6b

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,12 @@
 '@redocly/realm':
+  0.124.0-next.10:
+    timestamp: 1752503822000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where an RBAC match pattern starting with `**` did not override the global match pattern `**`.
+        - Fixed inaccurate search results in Markdown files.
+    dependencies: {}
   0.124.0-next.9:
     timestamp: 1752247504000
     changes:
@@ -3587,6 +3595,14 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.124.0-next.10:
+    timestamp: 1752503822000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where an RBAC match pattern starting with `**` did not override the global match pattern `**`.
+        - Fixed inaccurate search results in Markdown files.
+    dependencies: {}
   0.124.0-next.9:
     timestamp: 1752247504000
     changes:
@@ -6482,6 +6498,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.124.0-next.10:
+    timestamp: 1752503822000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where an RBAC match pattern starting with `**` did not override the global match pattern `**`.
+        - Fixed inaccurate search results in Markdown files.
+    dependencies: {}
   0.124.0-next.9:
     timestamp: 1752247504000
     changes:
@@ -9372,6 +9396,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.124.0-next.10:
+    timestamp: 1752503822000
+    changes:
+      minor: []
+      patch:
+        - Fixed an issue where an RBAC match pattern starting with `**` did not override the global match pattern `**`.
+        - Fixed inaccurate search results in Markdown files.
+    dependencies: {}
   0.124.0-next.9:
     timestamp: 1752247504000
     changes:
@@ -17464,6 +17496,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.7.0-next.10:
+    timestamp: 1752503822000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.124.0-next.10
+      '@redocly/redoc': 0.124.0-next.10
+      '@redocly/redoc-reef': 0.124.0-next.10
+      '@redocly/redoc-revel': 0.124.0-next.10
   1.7.0-next.9:
     timestamp: 1752247504000
     changes:
